--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <!-- OPEN GRAPH -->
 <meta property="og:title" content="Links oficiais | Danyllo trader">
 <meta property="og:description" content="Acesse os links oficiais de Danyllo trader, redes sociais e principais contatos em um só lugar.">
-<meta property="og:image" content="https://danyllotrader.com/assets/og-image.jpg">
-<meta property="og:url" content="https://danyllotrader.com">
+<meta property="og:image" content="https://danyllotrader.shop/assets/og-image.jpg">
+<meta property="og:url" content="https://danyllotrader.shop">
 <meta property="og:type" content="website">
 
 <!-- Twitter / WhatsApp -->
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:image" content="https://danyllotrader.com/assets/og-image.jpg">
+<meta name="twitter:image" content="https://danyllotrader.shop/assets/og-image.jpg">
 
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
